[package]
name = "agenthub"
version = "0.2.0-local-preview"
edition = "2021"
description = "Transactional runtime foundation for AI-agent workflows."
license = "UNLICENSED"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
libc = "0.2"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23"
