[package]
name = "agenthub"
version = "0.4.49-local-preview"
edition = "2021"
description = "Transactional runtime foundation for AI-agent workflows."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
libc = "0.2"
regex = "1.12"
rustyline = "14.0"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
ureq = { version = "2.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23"
